# aces

./: Cargo.toml  README.md  cargo-check-updates  rustfmt.toml
data/: arrow.cex  test-semantics-01.ces
examples/: enumerate.rs
src/: atom.rs  atoms.rs  ces.rs  content.rs  context.rs  domain.rs  error.rs  firing.rs  frame.rs  fuset.rs  lib.rs  link.rs  logging.rs  monomial.rs  multiset.rs  name.rs  node.rs  nodes.rs  polynomial.rs  runner.rs  sat.rs  solver.rs  spec.rs  state.rs  symmetry.rs  vis.rs  wedge.rs  yaml_script.rs
src/cli/: aces.cli  describe.rs  go.rs  main.rs  mod.rs  solve.rs  validate.rs
src/firing/: component.rs  mod.rs
theory/: fusets.md  notes.md  weights.md
