[workspace]

[package]

name = "aces"
version = "0.0.1"
description = "Algebra of Cause-Effect Structures"
authors = ["k7f"]
edition = "2018"
license = "MIT"
repository = "https://github.com/k7f/aces"
readme = "README.md"

[dependencies]

clap = { version = "2.33", features = ["yaml"] }
yaml-rust = "0.4"
regex = "1.1"
glob = "0.3"
lazy_static = "1.3"
